Fix bug with milling